# mia

./: .gitignore  mia.config.toml  readme.md  run.sh  shell.nix
brain/: main.py  pyproject.toml  test_live.py  ui_bridge.py
brain/actions/: browser_control.py  camera_capture.py  camera_manager.py  code_helper.py  computer_control.py  computer_settings.py  desktop.py  dev_agent.py  file_processor.py  flight_finder.py  game_updater.py  open_app.py  progress_popup.py  reminder.py  screen_capture.py  screen_processor.py  send_message.py  vision_module.py  weather_report.py  web_scraper.py  web_search.py  youtube_video.py
brain/agent/: error_handler.py  executor.py  planner.py  task_queue.py
brain/config/: __init__.py  api_keys.json
brain/core/: prompt.txt
brain/documents/: web_scraper.py
brain/memory/: config_manager.py  history.db  history_manager.py  memory_manager.py  summarizer.py
brain/utils/: config.py  logger.py
ui/src/: App.svelte  app.css
ui/src-tauri/: Cargo.toml  tauri.conf.json  test_webkit.rs
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/src/lib/components/: CameraFeedPanel.svelte  ChatPanel.svelte  LoadingScreen.svelte  LogPanel.svelte  MetricsPanel.svelte  ModulesPanel.svelte  SciFiPanel.svelte  SetupScreen.svelte  StatusText.svelte  ThreeOrb.svelte  TimePanel.svelte  WeatherPanel.svelte
ui/src/lib/stores/: miaState.ts  setupStore.ts
