[project]
name = "mia-brain"
version = "0.2.0"
description = "Project mia brain — Gemini Live AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.15.0",
    "google-genai",
    "google-generativeai>=0.4.0",
    "websockets>=12.0",
    "vosk",
    "Pillow>=10.2.0",
    "requests",
    "beautifulsoup4",
    "duckduckgo-search",
    "playwright",
    "pyautogui",
    "pyperclip",
    "opencv-python",
    "numpy",
    "mss",
    "psutil>=7.0.0",
    "send2trash",
    "youtube-transcript-api",
    "python-pptx",
    "python-dotenv",
    "webrtcvad>=2.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actions", "agent", "config", "memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
